# metalslug

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  userslist.csv
client/: .cproject  .gitignore  .project  Makefile
client/src/: client_main.cpp
client/src/model/: ClientHandler.cpp  ClientHandler.h  Configs.h  ConfigsXML.h  client.cpp  client.h  message.cpp  message.h
client/src/services/: loremIpsum.h
client/src/utils/: File.cpp  Logger.cpp  MessageUtils.cpp  MessageUtils.h  Protocol.h  SocketUtils.cpp  SocketUtils.h  StringUtil.h
client/src/view/: main.cpp  playerMain.cpp
client/src/view/SDL/: AudioTools.h  AudioToolsForRunningGame.h  BackgroundHandler.cpp  BackgroundHandler.h  BackgroundSprite.cpp  BackgroundSprite.h  BulletHandler.cpp  BulletHandler.h  BulletSprite.h  EnemyHandler.cpp  EnemyHandler.h  EnemySprite.cpp  EnemySprite.h  EnemySpriteBuilder.cpp  EnemySpriteBuilder.h  EnemyType.cpp  EnemyType.h  InitialWindow.cpp  InitialWindow.h  MiscelaneaSprite.cpp  MiscelaneaSprite.h  MscHandler.cpp  MscHandler.h  Music.cpp  Music.h  PlayerSprite.cpp  PlayerSprite.h  SDLRunningGame.cpp  SDLRunningGame.h  ScoreBoard.cpp  ScoreBoard.h  ScoreBoardOrganizer.cpp  ScoreBoardOrganizer.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  SpritesClasses.cpp  SpritesClasses.h  TextBox.cpp  (+3 more)
client/src/view/SDL/handlers/: BackgroundHandler.cpp  BackgroundHandler.h  BulletHandler.cpp  BulletHandler.h  EnemyHandler.cpp  EnemyHandler.h  MscHandler.cpp  MscHandler.h  PlayerHandler.cpp  PlayerHandler.h  types.h
client/src/view/SDL/sound-ttf/: Music.cpp  Music.h  Sound.cpp  Sound.h  TextBox.cpp  TextBox.h
client/src/view/SDL/spriteClasses/: BackgroundSprite.cpp  BackgroundSprite.h  BulletSprite.h  DataBarSprite.cpp  DataBarSprite.h  EnemySprite.cpp  EnemySprite.h  MiscelaneaSprite.h  PlayerSprite.cpp  PlayerSprite.h  ScoreBoardSprite.cpp  ScoreBoardSprite.h  Sprite.cpp  Sprite.h
client/src/view/sprites/backgrounds/: nube.xcf
client/src/view/sprites/player/: playerSprite.xcf
client/src/view/utils/: SDL_Key  installDependences  installSDL2.sh
client/view/: asdasdsa.cpp
client/view/SDL/: BackgroundSprite.cpp  InitialWindow.cpp  InitialWindow.h  SDLEvents.h  SDLRunningGame.h  SDLTools.h  Sprite.cpp
client/view/utils/: README.txt  installDependences
minichatserver/: client.cpp  server  server.cpp
notas/: 20160826.txt  20160921.txt  20160929.org
server/: .cproject  Makefile  config.xml  levels.xml
server/src/: server_main.cpp
server/src/model/: ClientConnection.cpp  ClientConnection.h  Configs.h  ConfigsXML.h  Event.cpp  EventHandler.h  PlayerEventHandler.cpp  PlayerEventHandler.h  UserLoader.cpp  UserLoader.h  server.cpp  server.h
server/src/model/game/: AnimatedObject.h  Background.cpp  Background.h  BonusManager.cpp  BonusManager.h  BonusStrategy.h  BoxBonus.cpp  BoxBonus.h  Bullet.cpp  Bullet.h  BulletBuilder.cpp  BulletBuilder.h  BulletMovementStrategy.cpp  BulletMovementStrategy.h  Colisionador.cpp  Colisionador.h  Enemy.cpp  Enemy.h  EnemyFinal1.cpp  EnemyFinal1.h  EnemyFinal2.cpp  EnemyFinal2.h  EnemyFinal3.cpp  EnemyFinal3.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  KillAllBonusStrategy.cpp  KillAllBonusStrategy.h  NormalBulletMovementStrategy.cpp  NormalBulletMovementStrategy.h  NotMoveBulletStrategy.cpp  NotMoveBulletStrategy.h  Plataforma.cpp  Plataforma.h  Player.cpp  Player.h  PlayerBuilder.cpp  PlayerBuilder.h  (+11 more)
server/src/test/: MessagesTests.cpp
server/src/utils/: File.h  MathUtil.h  MessageUtils.cpp  MessageUtils.h  Protocol.h  SocketUtils.cpp  SocketUtils.h
server/src/utils/xml/: XmlLoader.cpp  XmlLoader.h
src/: client.cpp  client_main.cpp  main.cpp  server.cpp  server_main.cpp
src/Utils/: File.h  Logger.cpp  Logger.h  MessageUtils.cpp  MessageUtils.h  Protocol.h  SocketUtils.cpp  SocketUtils.h  StringUtil.cpp  arch.txt  loremIpsum.cpp  loremIpsum.h
src/model/: ClientConnection.cpp  ClientConnection.h  ClientHandler.cpp  ClientHandler.h  User.cpp  User.h  UserLoader.cpp  UserLoader.h  client.cpp  client.h  message.cpp  message.h  server.cpp  server.h  userlist.csv
src/test/: MessagesTests.cpp
