cmake_minimum_required(VERSION 3.6)
project(metalslug)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    client/src/model/client.cpp
    client/src/model/client.h
    client/src/model/ClientHandler.cpp
    client/src/model/ClientHandler.h
    client/src/model/ConfigsXML.h
    client/src/model/message.cpp
    client/src/model/message.h
    client/src/model/User.cpp
    client/src/model/User.h
    client/src/utils/File.cpp
    client/src/utils/File.h
    client/src/utils/Logger.cpp
    client/src/utils/Logger.h
    client/src/utils/Protocol.h
    client/src/utils/SocketUtils.cpp
    client/src/utils/SocketUtils.h
    client/src/utils/StringUtil.cpp
    client/src/utils/StringUtil.h
    client/src/view/SDL/InitialWindow.cpp
    client/src/view/SDL/InitialWindow.h
    client/src/view/SDL/Music.cpp
    client/src/view/SDL/Music.h
    client/src/view/SDL/SDLRunningGame.cpp
    client/src/view/SDL/SDLRunningGame.h
    client/src/view/SDL/Sound.cpp
    client/src/view/SDL/Sound.h
    client/src/view/SDL/SpritesClasses.cpp
    client/src/view/SDL/SpritesClasses.h
    client/src/view/SDL/TextBox.cpp
    client/src/view/SDL/TextBox.h
    client/src/client_main.cpp
    server/src/model/game/AnimatedObject.h
    server/src/model/game/Background.cpp
    server/src/model/game/Background.h
    server/src/model/game/Bullet.cpp
    server/src/model/game/Bullet.h
    server/src/model/game/Enemy.cpp
    server/src/model/game/Enemy.h
    server/src/model/game/GameObject.cpp
    server/src/model/game/GameObject.h
    server/src/model/game/Player.cpp
    server/src/model/game/Player.h
    server/src/model/game/PlayerBuilder.cpp
    server/src/model/game/PlayerBuilder.h
    server/src/model/game/Scenery.cpp
    server/src/model/game/Scenery.h
    server/src/model/game/Weapon.cpp
    server/src/model/game/Weapon.h
    server/src/model/ClientConnection.cpp
    server/src/model/ClientConnection.h
    server/src/model/ConfigsXML.h
    server/src/model/Event.cpp
    server/src/model/Event.h
    server/src/model/EventHandler.h
    server/src/model/PlayerEventHandler.cpp
    server/src/model/PlayerEventHandler.h
    server/src/model/server.cpp
    server/src/model/server.h
    server/src/model/User.cpp
    server/src/model/User.h
    server/src/model/UserLoader.cpp
    server/src/model/UserLoader.h
    server/src/utils/xml/rapidxml.hpp
    server/src/utils/xml/rapidxml_utils.hpp
    server/src/utils/xml/XmlLoader.cpp
    server/src/utils/xml/XmlLoader.h
    server/src/utils/File.cpp
    server/src/utils/File.h
    server/src/utils/Logger.cpp
    server/src/utils/Logger.h
    server/src/utils/MessageUtils.cpp
    server/src/utils/MessageUtils.h
    server/src/utils/Protocol.h
    server/src/utils/SocketUtils.cpp
    server/src/utils/SocketUtils.h
    server/src/utils/StringUtil.cpp
    server/src/utils/StringUtil.h
    server/src/server_main.cpp
    server/config.xml)

add_executable(metalslug ${SOURCE_FILES})