cmake_minimum_required(VERSION 3.6)
project(metalslug)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    client/src/model/client.cpp
    client/src/model/client.h
    client/src/model/ClientHandler.cpp
    client/src/model/ClientHandler.h
    client/src/model/ConfigsXML.h
    client/src/model/message.cpp
    client/src/model/message.h
    client/src/model/User.cpp
    client/src/model/User.h
    client/src/utils/File.cpp
    client/src/utils/File.h
    client/src/utils/Logger.cpp
    client/src/utils/Logger.h
    client/src/utils/Protocol.h
    client/src/utils/SocketUtils.cpp
    client/src/utils/SocketUtils.h
    client/src/utils/StringUtil.cpp
    client/src/utils/StringUtil.h
    client/src/view/audios/musicGame.mp3
    client/src/view/SDL/BackgroundSprite.cpp
    client/src/view/SDL/BackgroundSprite.h
    client/src/view/SDL/EnemyHandler.cpp
    client/src/view/SDL/EnemyHandler.h
    client/src/view/SDL/EnemySprite.cpp
    client/src/view/SDL/EnemySprite.h
    client/src/view/SDL/InitialWindow.cpp
    client/src/view/SDL/InitialWindow.h
    client/src/view/SDL/Music.cpp
    client/src/view/SDL/Music.h
    client/src/view/SDL/PlayerSprite.cpp
    client/src/view/SDL/PlayerSprite.h
    client/src/view/SDL/SDLRunningGame.cpp
    client/src/view/SDL/SDLRunningGame.h
    client/src/view/SDL/Sound.cpp
    client/src/view/SDL/Sound.h
    client/src/view/SDL/Sprite.cpp
    client/src/view/SDL/Sprite.h
    client/src/view/SDL/TextBox.cpp
    client/src/view/SDL/TextBox.h
    client/src/view/sprites/backgrounds/lvl1/z0.png
    client/src/view/sprites/backgrounds/lvl1/z1.png
    client/src/view/sprites/backgrounds/lvl1/z2.png
    client/src/view/sprites/backgrounds/lvl2/z0.png
    client/src/view/sprites/backgrounds/lvl2/z1.png
    client/src/view/sprites/backgrounds/lvl2/z2.png
    client/src/view/sprites/backgrounds/lvl3/z0.png
    client/src/view/sprites/backgrounds/lvl3/z1.png
    client/src/view/sprites/backgrounds/lvl3/z2.png
    client/src/view/sprites/backgrounds/demo.png
    client/src/view/sprites/backgrounds/front.png
    client/src/view/sprites/backgrounds/m1.png
    client/src/view/sprites/backgrounds/m2.png
    client/src/view/sprites/backgrounds/m3.png
    client/src/view/sprites/backgrounds/m4.png
    client/src/view/sprites/backgrounds/m5.png
    client/src/view/sprites/backgrounds/m6-1.png
    client/src/view/sprites/backgrounds/SelectMetal.jpg
    client/src/view/sprites/backgrounds/startScreen.png
    client/src/view/sprites/backgrounds/waitingPlayers.png
    client/src/view/sprites/enemies/allen.png
    client/src/view/sprites/enemies/enemy_normal_1.png
    client/src/view/sprites/enemies/enemy_normal_2.png
    client/src/view/sprites/enemies/enemy_normal_3.png
    client/src/view/sprites/enemies/hairbuster.png
    client/src/view/sprites/enemies/hido.png
    client/src/view/sprites/enemies/ironIso.png
    client/src/view/sprites/enemies/ironNokana.png
    client/src/view/sprites/enemies/landseek.png
    client/src/view/sprites/enemies/middleSon.png
    client/src/view/sprites/enemies/miniBata.png
    client/src/view/sprites/enemies/rebelBiker.png
    client/src/view/sprites/enemies/rebelSoldier.png
    client/src/view/sprites/enemies/rebelVan.png
    client/src/view/sprites/enemies/rShobu.png
    client/src/view/sprites/enemies/shoeKarn.png
    "client/src/view/sprites/enemies/soldierBazooka F.png"
    client/src/view/sprites/enemies/soldierBazooka.png
    client/src/view/sprites/enemies/soldierRifle.png
    client/src/view/sprites/enemies/soldierRPG2.png
    client/src/view/sprites/enemies/soldierShield.png
    client/src/view/sprites/enemies/soldierTurret.png
    client/src/view/sprites/enemies/tani.png
    client/src/view/sprites/enemies/type02DiCokka.png
    client/src/view/sprites/enemies/type04Girida.png
    "client/src/view/sprites/enemies/Type2B .png"
    client/src/view/sprites/misc/airplane.png
    client/src/view/sprites/misc/blood.gif
    client/src/view/sprites/misc/boat.png
    client/src/view/sprites/misc/daririn.png
    client/src/view/sprites/misc/explosion.png
    client/src/view/sprites/misc/gameOver.png
    client/src/view/sprites/misc/hudInterface.png
    client/src/view/sprites/misc/items.png
    client/src/view/sprites/misc/nazca.png
    client/src/view/sprites/misc/outhouse.png
    client/src/view/sprites/misc/setup.png
    client/src/view/sprites/misc/vehicles.png
    client/src/view/sprites/misc/weapon.png
    client/src/view/sprites/npc/civilians.png
    client/src/view/sprites/npc/generalMorden.png
    "client/src/view/sprites/npc/powsHelpful .png"
    client/src/view/sprites/npc/satiko.png
    client/src/view/sprites/npc/soldier.png
    client/src/view/sprites/player/armas.png
    client/src/view/sprites/player/eri.png
    client/src/view/sprites/player/eriGrisado.png
    client/src/view/sprites/player/fio.png
    client/src/view/sprites/player/fioGrisado.png
    client/src/view/sprites/player/marco.png
    client/src/view/sprites/player/marcoGrisado.png
    client/src/view/sprites/player/tarma.png
    client/src/view/sprites/player/tarmaGrisado.png
    client/src/view/sprites/slug/slug.gif
    client/src/view/sprites/defaultImage.png
    client/src/view/sprites/front.bmp
    client/src/view/ttf/MetalSlug.TTF
    client/src/view/utils/installDependences
    client/src/view/utils/installSDL2.sh
    client/src/view/utils/README.txt
    client/src/view/utils/SDL_Key
    client/src/view/client.log
    client/src/client_main.cpp
    client/client
    client/client.log
    client/Makefile
    server/src/model/game/AnimatedObject.h
    server/src/model/game/Background.cpp
    server/src/model/game/Background.h
    server/src/model/game/Bullet.cpp
    server/src/model/game/Bullet.h
    server/src/model/game/BulletMovementStrategy.cpp
    server/src/model/game/BulletMovementStrategy.h
    server/src/model/game/Enemy.cpp
    server/src/model/game/Enemy.h
    server/src/model/game/GameObject.cpp
    server/src/model/game/GameObject.h
    server/src/model/game/NormalBulletMovementStrategy.cpp
    server/src/model/game/NormalBulletMovementStrategy.h
    server/src/model/game/Plataforma.cpp
    server/src/model/game/Plataforma.h
    server/src/model/game/Player.cpp
    server/src/model/game/Player.h
    server/src/model/game/PlayerBuilder.cpp
    server/src/model/game/PlayerBuilder.h
    server/src/model/game/Scenery.cpp
    server/src/model/game/Scenery.h
    server/src/model/game/TeledirBulletMovementStrategy.cpp
    server/src/model/game/TeledirBulletMovementStrategy.h
    server/src/model/ClientConnection.cpp
    server/src/model/ClientConnection.h
    server/src/model/ConfigsXML.h
    server/src/model/Event.cpp
    server/src/model/Event.h
    server/src/model/EventHandler.h
    server/src/model/PlayerEventHandler.cpp
    server/src/model/PlayerEventHandler.h
    server/src/model/server.cpp
    server/src/model/server.h
    server/src/model/User.cpp
    server/src/model/User.h
    server/src/model/UserLoader.cpp
    server/src/model/UserLoader.h
    server/src/utils/xml/rapidxml.hpp
    server/src/utils/xml/rapidxml_utils.hpp
    server/src/utils/xml/XmlLoader.cpp
    server/src/utils/xml/XmlLoader.h
    server/src/utils/File.cpp
    server/src/utils/File.h
    server/src/utils/Logger.cpp
    server/src/utils/Logger.h
    server/src/utils/MathUtil.h
    server/src/utils/MessageUtils.cpp
    server/src/utils/MessageUtils.h
    server/src/utils/Protocol.h
    server/src/utils/SocketUtils.cpp
    server/src/utils/SocketUtils.h
    server/src/utils/StringUtil.cpp
    server/src/utils/StringUtil.h
    server/src/server_main.cpp
    server/config.xml
    server/levels.xml
    server/Makefile
    server/server
    server/server.log
    server/userslist.csv client/src/view/SDL/types.h client/src/view/SDL/BulletHandler.cpp client/src/view/SDL/BulletHandler.h client/src/view/SDL/BulletSprite.h client/src/view/SDL/BackgroundHandler.cpp client/src/view/SDL/BackgroundHandler.h client/src/view/SDL/MscHandler.cpp client/src/view/SDL/MscHandler.h client/src/view/SDL/MiscelaneaSprite.cpp client/src/view/SDL/MiscelaneaSprite.h)

add_executable(metalslug ${SOURCE_FILES})